--- a/src/styles/SymptomResult.css
+++ b/src/styles/SymptomResult.css
@@ -2,7 +2,12 @@
   padding: 20px;
   height: 100vh;
   width: 100vw;
-  background-color: red;
+  background-color: var(--background);
+}
+
+.result__container {
+  width: 100%;
+  height: 60%;
 }
 .result__graphContainer {
   background-color: #fff;
