--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -31,7 +31,7 @@
 .home__buttons {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     width: 30%;
 }
 .home__button {
@@ -51,19 +51,40 @@
     background-color: white;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
+}
+.home__bottom h2 {
     text-align: center;
+    margin-bottom: 10px;
 }
 .home__pastDiagnosis {
-    display: flex;
+    /* display: flex;
     align-items: center;
     justify-content: center;
-    height: 30vh;
+    height: fit-content; */
 }
-
+.home__prediction {
+    padding: 10px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 @media (max-width: 420px) {
     .home__buttons {
         width: fit-content;
         flex-direction: column;
         height: 40%;
+    }
+    .home__top {
+        height: 20vh;
+    }
+    .home {
+        background-size: unset;
+        background-repeat: no-repeat;
+        background-position: unset;
+    }
+    .home__bottom {
+        border-top-left-radius: 40px;
+        border-top-right-radius: 40px;
     }
 }
